Fix all methods that are needed